--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,34 @@
   }
 }
 
+.navLinks{
+  font-weight: 800;
+  display: flex;
+  font-size: 2vw;
+  height: 6vh;
+  align-items: center;
+  background-color: #DDD;
+}
+
+.navLinks div {
+  flex: 1;
+  align-items: center;
+  text-align: center;
+  height: 100%; 
+  display: flex;
+}
+
+.navLinks div:hover{
+  background-color: lightcyan;
+  font-size: 2.2vw;
+}
+
+a{
+  text-decoration: none;
+  color: teal;
+  width: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
